--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul class="container-list">
         <li class="list-item">
             <h3 class="title">Formla 1 musobaqasi</h3>
-            <p class="text">Musobaqasiga qatnasha olish imkoniyatingizni aniqlang</p>
+            <p class="text">Musobaqada qatnasha olish imkoniyatingizni aniqlang</p>
 
             <form class="form">
                 <input class="input" type="text" placeholder="Yoshingizni kiriting" autocomplete="off" aria-label="Yoshni aniqlash" >
